.devcontainer/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9081
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: metadata
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/metadata/"
                          route:
                            cluster: metadata
                            prefix_rewrite: "/"
                        - match:
                            prefix: "/search/"
                          route:
                            cluster: search
                            prefix_rewrite: "/"
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: metadata
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: metadata
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: devcontainer
                      port_value: 9051

    - name: search
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: search
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: devcontainer
                      port_value: 9053
